# src/routes/index.js
@@ -7,6 +7,8 @@ router.use('/users', require('./user'))
 router.use('/tokens',require('./token'))
 router.use('/houses',require('./house'))
 router.use('/reservations',require('./reservation'))
+router.use('/ratings',require('./rating'))
+router.use('/documents', require('./document'))
 
 
 module.exports=router
